# usetheforceluke

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_demo.py  01_extended_models.py  02_evaluation.py  03_documentation_figures.py  04_technical_figures.py  05_animations.py  06_blackhole_explorer.py  07_negative_mass_binaries.py
results/: missions.md  snapshot.md
src/usetheforce/: __init__.py  _negmass.py  _schwarzschild.py  _yukawa.py  composite.py  protocol.py  units.py
src/usetheforce/antimatter/: __init__.py  conversion.py  graviton.py
src/usetheforce/blackhole/: __init__.py  counter_drive.py  metric.py
src/usetheforce/casimir/: __init__.py  parallel_plate.py  scaled.py
src/usetheforce/control/: __init__.py  controllers.py  field.py  optimisation.py  power.py
src/usetheforce/fields/: __init__.py  grid.py  laplacian.py  sample.py
src/usetheforce/missions/: __init__.py  adapters.py  long_range.py  missions.py  render.py  snapshot.py  vehicles.py
src/usetheforce/negmass/: __init__.py  anti_chirp.py  bondi_pair.py  buffer.py  dipole_gw.py  unstable.py
src/usetheforce/qfield/: __init__.py  heavy_elements.py  models.py  stimulated_emission.py
src/usetheforce/qgp/: __init__.py  graviton.py  source.py
src/usetheforce/symbolic/: __init__.py  casimir.py  conservation.py  graviton.py  heavy_elements.py  negative_mass.py  qgp.py  schwarzschild.py  stimulated_emission.py
tests/: test_antimatter_graviton.py  test_blackhole_counter_drive.py  test_blackhole_metric.py  test_casimir_parallel_plate.py  test_composite_field.py  test_conservation.py  test_control_controllers.py  test_control_field.py  test_control_optimisation.py  test_control_power.py  test_diagnostics.py  test_documentation_figures.py  test_evaluation_reproducibility.py  test_fields.py  test_long_range_missions.py  test_missions_adapters.py  test_missions_run.py  test_missions_snapshot.py  test_missions_vehicles.py  test_negmass_anti_chirp.py  test_negmass_bondi_pair.py  test_negmass_buffer.py  test_negmass_dipole_gw.py  test_negmass_unstable.py  test_planning.py  test_protocol.py  test_qfield_heavy_elements.py  test_qfield_stimulated_emission.py  test_qgp_graviton.py  test_qgp_source.py  test_symbolic.py  test_trajectories_newtonian.py  test_units.py  test_viz_smoke.py
(+10 files in other folders)
